fixing the error on mobile css

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -75,9 +75,6 @@ body{
     display: -moz-stack;
     grid-template-columns: 25% 50% 25%;
     grid-template-rows: auto;
-    grid-template-areas: "h1 h1 h1"
-                        "nav main aside"
-                        "footer footer footer";
     
 }
 
@@ -100,3 +97,4 @@ img{
     height: auto;
     width: 330px;
   }
+  
